[package]
name = "neocities"
description = "A simple Neocities API library"
version = "0.9.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/neocities/"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.10", features = ["full"] }

# TODO: write cli tool example
#[[example]]
#name = "neocities-cli"