[package]
name = "neocities"
description = "A simple Neocities API library"
version = "1.0.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/neocities/"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# For the example CLI tool
[dev-dependencies]
tokio = { version = "1.10", features = ["full"] }
clap = "3.0.0-beta.4"
walkdir = "2.3"

[[example]]
name = "neocities-cli"
